# CppPatterns

./: .gitignore  build.bat
src/: CMakeLists.txt
src/Active/: CMakeLists.txt  main.cpp
src/Observer/: CMakeLists.txt  ConcreteObservable.h  ConcreteObserver.h  IObservable.h  IObserver.h  main.cpp
src/Strategy/: .main.cpp.swp  CMakeLists.txt  main.cpp
